spectec/test/elab/neg/type-extend-primitive.t
  $ ./main.exe type-extend-primitive.spectec 2>&1
  error: cannot extend a non-variant type
    --> type-extend-primitive.spectec:2:5
    |
  2 |   | bool
    |     ^^^^
    = source: elab
  [1]
